fixed footer position on mobile, and padding for projects

--- a/style.css
+++ b/style.css
@@ -48,6 +48,12 @@ a {
     0px 18px 23px rgba(0,0,0,0.2);
 }
 
+@media (max-width : 600px) {
+    #homepage {
+        font-size: 1.4rem;
+    }
+}
+
 #contact {
     font-size: 1.5rem;
     text-shadow:    0px 4px 3px rgba(0, 0, 0, 0.6),
@@ -71,6 +77,11 @@ footer {
     color: rgba(132, 138, 155, 0.562);
 }
 
+@media (max-width : 600px) {
+    footer {
+        position: static;
+    }
+}
 
 #mainNavbar {
     transition: background 0.6s;
@@ -116,13 +127,13 @@ footer {
 /* Homepage animations */
 #hi {
     opacity: 0;
-    animation-name: appear_hi;
+    animation-name: appear;
     animation-duration: 2s;
     animation-delay: 1s;
     animation-fill-mode: forwards;
 }
 
-@keyframes appear_hi {
+@keyframes appear {
     100% {
         opacity: 1
     }
@@ -131,7 +142,7 @@ footer {
 
 #question {
     opacity: 0;
-    animation-name: appear_hi;
+    animation-name: appear;
     animation-duration: 2s;
     animation-delay: 3s;
     animation-fill-mode: forwards;
@@ -139,7 +150,7 @@ footer {
 
 #answer {
     opacity: 0;
-    animation-name: appear_hi;
+    animation-name: appear;
     animation-duration: 2s;
     animation-delay: 5.5s;
     animation-fill-mode: forwards;
@@ -147,7 +158,7 @@ footer {
 
 #cta {
     opacity: 0;
-    animation-name: appear_hi;
+    animation-name: appear;
     animation-duration: 2s;
     animation-delay: 8s;
     animation-fill-mode: forwards;
